fix-gap

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,6 +5,8 @@
 }
 
 .screen-footer {
+  padding-top: 25px;
+  padding-bottom: 25px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 11px;
+  gap: 32px;
   font-size: 16px;
 }
 
